gcc/testsuite/gdc.test/compilable/imports/a12511.d
module a12511;

public class A
{
    private static void foo() {}
    public static void foo(int) {}
}
