gcc/testsuite/gdc.test/fail_compilation/fail6242.d
class A { void fun(int) {} }

class B : A { void fun(int x) in { assert(x > 0); } body {} }
